--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <div>
                         <h3>Proyecto 7</h3>
                         <p>
-                            Me base en la aplicación de Spotify para crear una versión parecida a la original, probé con las transparencias, colores, formas, iconos, explore con nuevos plugins, tomé la imagen de Miley Cyrus, utilice imagenes de Pexels pero de diferente manera no fue necesario descargar la imagen, simplemente la copiaba de Pexels y la pegaba en Figma, eso te ahorra demasiado tiempo y es más práctico.
+                            Me base en la aplicación de Spotify para crear una versión parecida a la original, utilice imagenes de Pexels pero de diferente manera no fue necesario descargar la imagen, simplemente la copiaba de Pexels y la pegaba en Figma, eso te ahorra demasiado tiempo.
                         </p>
                     </div>
                 </aside>
@@ -254,157 +254,13 @@
                     <div>
                         <h3>Proyecto 9</h3>
                         <p>
-                            Este diseño fue por una actividad en una clase, el reto era crear una app sobre alquilamiento de vivienda, así que el nombre que se me ocurrio fue yo rento, pero para que sonará más cool le puse iRent!, me base en otras aplicaciones para saber que era lo que contenía cada una y que podía adaptar a la mia pero que al final fue sencilla y fácil de usar. En este caso solo teníamos que hacer la portada. 
+                            Este diseño fue por una actividad en una clase, el reto era crear una app sobre alquilamiento de vivienda, así que el nombre que se me ocurrio fue yo rento, pero para que sonará más cool le puse iRent!, me base en otras aplicaciones para que fuera sencilla y fácil de usar. En este caso solo teníamos que hacer la portada. 
                         </p>
                     </div>
                 </aside>
             </a>
         </div>
         </section>
-        <article class="modal" id="trabajo-1">
-        <div class="modal-content">
-            <a href="#cerrar" class="modal-close">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-            </a>
-            <article class="portfolio-modal">
-                <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                <div class="portfolio-info">
-                    <h3>NOMBRE DEL PROYECTO 1</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                    <aside class="portfolio-details">
-                    <small><b>CLIENTE:</b></small>
-                    <small>Nombre del cliente</small>
-                    <small><b>FECHA:</b></small>
-                    <small>23/02/2022</small>
-                    <small><b>TIPO:</b></small>
-                    <small>Tipo de Proyecto</small>
-                    <small><b>ENLACE:</b></small>
-                    <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                </aside>
-                </div>
-            </article>
-        </div>
-        </article>
-        <article class="modal" id="trabajo-2">
-            <div class="modal-content">
-                <a href="#cerrar" class="modal-close">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-                </a>
-                <article class="portfolio-modal">
-                    <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                    <div class="portfolio-info">
-                        <h3>NOMBRE DEL PROYECTO 2</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                        <aside class="portfolio-details">
-                        <small><b>CLIENTE:</b></small>
-                        <small>Nombre del cliente</small>
-                        <small><b>FECHA:</b></small>
-                        <small>23/02/2022</small>
-                        <small><b>TIPO:</b></small>
-                        <small>Tipo de Proyecto</small>
-                        <small><b>ENLACE:</b></small>
-                        <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                    </aside>
-                    </div>
-                </article>
-            </div>
-        </article>
-        <article class="modal" id="trabajo-3">
-                <div class="modal-content">
-                    <a href="#cerrar" class="modal-close">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-                    </a>
-                    <article class="portfolio-modal">
-                        <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                        <div class="portfolio-info">
-                            <h3>NOMBRE DEL PROYECTO 3</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                            <aside class="portfolio-details">
-                            <small><b>CLIENTE:</b></small>
-                            <small>Nombre del cliente</small>
-                            <small><b>FECHA:</b></small>
-                            <small>23/02/2022</small>
-                            <small><b>TIPO:</b></small>
-                            <small>Tipo de Proyecto</small>
-                            <small><b>ENLACE:</b></small>
-                            <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                        </aside>
-                        </div>
-                    </article>
-                </div>
-        </article>
-        <article class="modal" id="trabajo-4">
-            <div class="modal-content">
-                <a href="#cerrar" class="modal-close">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-                </a>
-                <article class="portfolio-modal">
-                    <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                    <div class="portfolio-info">
-                        <h3>NOMBRE DEL PROYECTO 4</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                        <aside class="portfolio-details">
-                        <small><b>CLIENTE:</b></small>
-                        <small>Nombre del cliente</small>
-                        <small><b>FECHA:</b></small>
-                        <small>23/02/2022</small>
-                        <small><b>TIPO:</b></small>
-                        <small>Tipo de Proyecto</small>
-                        <small><b>ENLACE:</b></small>
-                        <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                    </aside>
-                    </div>
-                </article>
-            </div>
-        </article>
-        <article class="modal" id="trabajo-5">
-                <div class="modal-content">
-                    <a href="#cerrar" class="modal-close">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-                    </a>
-                    <article class="portfolio-modal">
-                        <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                        <div class="portfolio-info">
-                            <h3>NOMBRE DEL PROYECTO 5</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                            <aside class="portfolio-details">
-                            <small><b>CLIENTE:</b></small>
-                            <small>Nombre del cliente</small>
-                            <small><b>FECHA:</b></small>
-                            <small>23/02/2022</small>
-                            <small><b>TIPO:</b></small>
-                            <small>Tipo de Proyecto</small>
-                            <small><b>ENLACE:</b></small>
-                            <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                        </aside>
-                        </div>
-                    </article>
-                </div>
-        </article>
-        <article class="modal" id="trabajo-6">
-            <div class="modal-content">
-                <a href="#cerrar" class="modal-close">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
-                </a>
-                <article class="portfolio-modal">
-                    <img src="images/Pexels Photo by Burst.jpg" alt="Trabajo-1">
-                    <div class="portfolio-info">
-                        <h3>NOMBRE DEL PROYECTO 6</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium suscipit natus error omnis quis adipisci, explicabo fugiat ex, soluta debitis facere cumque cupiditate perspiciatis. Laudantium totam cupiditate ratione inventore!</p>
-                        <aside class="portfolio-details">
-                        <small><b>CLIENTE:</b></small>
-                        <small>Nombre del cliente</small>
-                        <small><b>FECHA:</b></small>
-                        <small>23/02/2022</small>
-                        <small><b>TIPO:</b></small>
-                        <small>Tipo de Proyecto</small>
-                        <small><b>ENLACE:</b></small>
-                        <small><a href="https://amairanicarrillo.com" target="_blank" rel="noopener">https://proyecto.com</a></small>
-                    </aside>
-                    </div>
-                </article>
-            </div>
-        </article>
         <!-- <section id="testimonios" class="testimonials">
             <article class="hero-image" style="--hero-image: url('images/Pexels\ Photo\ by\ Adrienne\ Andersen.jpg');
             --hero-attachment: scroll;">
