correcion de imagen

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </aside>
             </a>
             <a href="#trabajo-4" class="portfolio-card">
-                <img src="images/Galería Interactiva.png" alt="Trabajo 4">
+                <img src="images/Pexels Photo by cottonbro.jpg" alt="Trabajo 4">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto 4</h3>
