--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </aside>
             </a>
             <a href="#trabajo-3" class="portfolio-card">
-                <img src="images/Gallery-ip.png" alt="Trabajo 3">
+                <img src="images/SushiApp.png" alt="Trabajo 3">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto 3</h3>
@@ -194,7 +194,7 @@
                 </aside>
             </a>
             <a href="#trabajo-4" class="portfolio-card">
-                <img src="images/Pexels Photo by cottonbro.jpg" alt="Trabajo 4">
+                <img src="images/Gallery-ip.png" alt="Trabajo 4">
                 <aside class="portfolio-card-info">
                     <div>
                         <h3>Proyecto 4</h3>
